# ai-dinero

./: .gitignore  ExpensesManager.py  TransactionManager.py  main.py  pyproject.toml  readme.md  requirements.txt  scrape.py
app/: main.py
app/db/: categories.py  core.py  expenses.py  users.py
app/routers/: categories.py  expenses.py  users.py
app/services/: ExpensesManager.py
db/: core.py  expenses.py
routers/: expenses.py
src/routers/: expenses.py
src/services/: ExpensesManager.py  scrape.py
src/utils/: decorators.py
