[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-dinero"
version = "0.1.0"
requires-python = ">=3.11,<3.12"

dependencies = [
    "fastapi",
    "sqlalchemy",
    "python-dotenv",
    "uvicorn>=0.15.0"
]

[tool.hatch.build.targets.wheel]
packages = ["."]